# MissionGeneratorMG1

./: README.md
params/: configurationParametersMG1.txt
src/: CMakeLists.txt  mission_template.argos
src/cmake/: ARGoSBuildChecks.cmake  ARGoSBuildFlags.cmake
src/demiurge/: CMakeLists.txt
src/demiurge/generic-loop-functions/: CMakeLists.txt
src/demiurge/generic-loop-functions/Arenas/: BaseArena.cpp  BaseArena.h  HexagonArena.cpp  HexagonArena.h  TetragonArena.cpp  TetragonArena.h  TrigonArena.cpp  TrigonArena.h
src/demiurge/generic-loop-functions/Arenas/Objects/: Box.cpp  Box.h  Light.cpp  Light.h  Patch.cpp  Patch.h
src/demiurge/generic-loop-functions/Generator/: ConfigurationParser.cpp  ConfigurationParser.h  MissionGeneratorMain.cpp
src/demiurge/generic-loop-functions/Missions/: AggregationXORMission.cpp  AggregationXORMission.h  ForagingMission.cpp  ForagingMission.h  GenericLoopFunctions.cpp  GenericLoopFunctions.h  HomingMission.cpp  HomingMission.h
